customer-service/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
  namespace: services
  labels:
    app: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client-service
          image: agilesolutions/client-service:1.0.1
          ports:
            - containerPort: 8080
